# CarIActerologie_OpenAISDK

./: .bandit  .gitignore  .pre-commit-config.yaml  =5.17.0  CLAUDE.md  DAY1_COMPLETION_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  README_CONFIG.md  VECTOR_STORE_STATUS.md  app.py  config_setup.py  design_doc.md  docker-compose.yml  first_three_weeks_todo_list.md  implementation_plan.md  pr_description.md  pyproject.toml  pytest.ini  requirements.txt  run.bat  run_poetry.ps1  setup.bat  test_config.py
.claude/: settings.local.json
.github/: BRANCH_PROTECTION_SETUP.md
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: __init__.py  berger_judet_extensions.json  character_type_schemas.json  characterology_knowledge_base.json  knowledge_base_schemas.json  mock_data.py  psychological_traits_taxonomy.json  validation.py
data/source_documents/: personality_assessment_doc.md
docs/: API_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md
modules/: __init__.py  agent_tools.py  config.py  faiss_knowledge_base.py  faiss_optimizer.py  knowledge_api.py  knowledge_validator.py  knowledge_versioning.py  mem0_integration.py  report_generator.py  report_generator_backup.py  vector_store_setup.py
pages/: 1_Chat.py  2_Analysis.py  3_Dashboard.py  4_Reports.py  5_Settings.py  6_Help.py
project_planning/: DAY19_COMPLETION_SUMMARY.md  DAY20_COMPLETION_SUMMARY.md  DEPLOYMENT.md  POETRY_SETUP.md  first_three_weeks_todo_list.md
tests/: conftest.py  test_ui_streamlit_pages.py  test_unit_mock_data.py  test_unit_report_generator.py
