[tool.poetry]
name = "cariacterology"
version = "0.1.0"
description = "AI-Powered Psychological Self-Discovery Platform based on René Le Senne's characterology"
authors = ["CarIActerology Team <team@cariacterology.ai>"]
readme = "README.md"
packages = [{include = "modules"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
plotly = "^5.17.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
python-dateutil = "^2.8.2"
reportlab = "^4.0.0"

# Future AI integration dependencies (commented for Phase 1)
# openai = "^1.10.0"
# mem0ai = "^0.1.0"
# faiss-cpu = "^1.7.4"
# supabase = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.0"
black = "^23.0.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "UP", "S", "B", "A", "C4", "ISC", "ICN", "PIE", "T20", "PYI", "PT", "Q", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"